# learningc

./: README.md  autogen.sh  configure.ac
src/: Makefile.am  himom.c  main.c
