AC_PREREQ(2.59)
AC_INIT(cexample, [0.1], [sbalneav@mate-desktop.org])
AC_CONFIG_SRCDIR([src/main.c])
AM_INIT_AUTOMAKE
AC_CANONICAL_HOST

AM_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for header files.
AC_HEADER_STDC

AC_OUTPUT(Makefile src/Makefile)
